force-app/main/default/objects/Patronage__c/Patronage__c.object-meta.xml
<CustomObject>
    <label>Patronage</label>
    <nameField>
        <label>Patronage POC Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Patronage</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>