force-app/main/default/objects/Patronage__c/fields/External_Job_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Job_ID__c</fullName>
    <label>External Job ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>