force-app/main/default/objects/Patronage__c/fields/Mode__c.field-meta.xml
<CustomField>
    <fullName>Mode__c</fullName>
    <label>Mode</label>
    <length>100</length>
    <type>Text</type>
</CustomField>