force-app/main/default/objects/Patronage__c/fields/Patronage__c.field-meta.xml
<CustomField>
    <fullName>Patronage__c</fullName>
    <label>Patronage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>