force-app/main/default/objects/Patronage__c/fields/Route_Description__c.field-meta.xml
<CustomField>
    <fullName>Route_Description__c</fullName>
    <formula>Taxonomy_Location__r.Route_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Route Description</label>
    <type>Text</type>
</CustomField>