force-app/main/default/objects/Patronage__c/fields/Route_Variant_Type__c.field-meta.xml
<CustomField>
    <fullName>Route_Variant_Type__c</fullName>
    <formula>Taxonomy_Location__r.Route_Variant_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Route Variant Type</label>
    <type>Text</type>
</CustomField>