force-app/main/default/objects/Patronage__c/fields/Taxonomy_Location__c.field-meta.xml
<CustomField>
    <fullName>Taxonomy_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Taxonomy Location</label>
    <referenceTo>Taxonomy_Metadata__c</referenceTo>
    <relationshipLabel>Patronage</relationshipLabel>
    <relationshipName>Patronage</relationshipName>
    <type>Lookup</type>
</CustomField>