force-app/main/default/objects/Patronage__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Patronage__c</columns>
    <columns>Date__c</columns>
    <columns>Contract__c</columns>
    <columns>Taxonomy_Location__c</columns>
    <columns>Location_Level_1__c</columns>
    <columns>Location_Level_3__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>